--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"axios": "^1.7.9",
 		"concurrently": "^8.2.2",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
